Changelog
=========

2019.2.0 (unreleased)
---------------------

- Nightly jobs: Also log exceptions to logfile, not just Sentry. [lgraf]
- Set 90px as a minimum instead of fixed height for description-like widgets. [lgraf]
- Fix resolving of multi-adminunit tasks. [phgross]
- Fix the setting of the content-type for Oneoffixx templates. [Rotonen]
- Concistently use "déroulement standard" for tasktemplates in French. [njohner]
- Update and add missing French translations. [njohner, andresoberhaensli]
- Fix has_children indexer which lead to duplicate brains. [njohner, phgross]
- Trash: Update and reindex modification date when trashing documents. [lgraf]
- Respect tabbedview settings when generating a document excel export. [phgross]
- Add file_extension indexer for mails. [phgross]
- Fix upgrade step adding document_type index to not update the metadata. [njohner]
- Log nightly job output to a dedicated, self-rotating logfile. [lgraf]
- Add flag to force execution of nightly jobs. [njohner]
- Fix task activity tests. [njohner]
- Implement nightly job to perform jobs after dossier resolution. [lgraf]
- Bump plone.restapi to 3.9.0. [phgross]
- Improve the styling of the tabbedview keyword filter. [phgross]
- Adapt task reassign activity message. [njohner]
- Queue each document archival conversion only once in a single request. [njohner]
- Do not fire task delegate activity twice. [njohner]
- Do not allow sorting on Keywords in dossier and document listings. [njohner]
- Also update content controls when updating doc properties. [buchi]
- Include userid and fullname of current user in @config endpoint. [buchi]
- Include preserved_as_paper_default in the @config endpoint and view. [Rotonen]
- Pass context and orgunit as parameters to webactions. [njohner]
- Implement resolving dossiers recursively via REST API. [lgraf]
- Extend @listing endpoint with `workspace_folders`-listing. [elioschmutz]
- Allow members to access plone vocabularies through restapi. [elioschmutz]